# hello-world

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HOMEWORK.md  Makefile  README.md  pyproject.toml
.githooks/: commit-msg
.github/workflows/: README.md  deploy.yml  release.yml
.github/workflows/docs/: ARCHITECTURE.md  cicd-architecture.dot  cicd-architecture.drawio  credentials-flow.dot  credentials-flow.drawio
assets/diagrams/: architecture.dot  architecture.drawio  cicd-pipeline.dot  cicd-pipeline.drawio
deploy/: README.md  ansible.cfg  docker-compose.yml.j2  hello-world.service.j2  inventory.ini.example  playbook.yml
deploy/docs/: ARCHITECTURE.md  deploy-architecture.dot  deploy-architecture.drawio  deploy-flow.dot  deploy-flow.drawio  trigger-flow.dot  trigger-flow.drawio
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml
docs/: environments.md
infra/: ARCHITECTURE.md  EKS_CLUSTER.md  README.md  SSM.md  architecture.dot  cloudformation.yml  eks-architecture.dot  eks-architecture.drawio  eksctl-cluster.yaml  ssm-test.yaml
infra/docs/: ARCHITECTURE.md  eks-architecture.dot  infra-architecture.dot  infra-architecture.drawio
k8s/: ARCHITECTURE.md  README.md  deployment.yaml  k8s-architecture.dot  k8s-architecture.drawio  kustomization.yaml  namespace.yaml  service.yaml
src/hello_world/: __init__.py
tests/: test_server.py
tools/: generate_architecture_diagram.py  generate_cicd_diagram.py  generate_credentials_flow_diagram.py  generate_deploy_diagram.py  generate_drawio.py  generate_eks_diagram.py  generate_infra_diagram.py  generate_k8s_diagram.py  generate_workflows_diagram.py
tools/headlamp/: README.md  admin-user.yaml  basic-auth-proxy.yaml  deploy.sh  namespace.yaml  values.yaml
tools/k9s/: .gitignore  README.md  run-k9s.sh
