[project]
name = "hello-world"
version = "4.0.0"
description = "Simple hello-world web server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
hello-world = "hello_world:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hello_world"]

[dependency-groups]
dev = [
    "ansible>=13.2.0",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
