[project]
name = "hello-world"
version = "2.1.1"
description = "Simple hello-world web server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
hello-world = "hello_world:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hello_world"]

[dependency-groups]
dev = [
    "commitizen>=4.12.0",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.1.1"
version_files = [
    "pyproject.toml:^version"
]
tag_format = "v$version"
update_changelog_on_bump = false
major_version_zero = true
